# wxCoolProp

./: CMakeLists.txt  GUIFrame.cpp  GUIFrame.h  README.md  WxWizFrame.fbp  coolpropApp.cpp  coolpropApp.h  coolpropMain.cpp  coolpropMain.h  description.cpp  description.h  wx_pch.h
