CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(wxCoolProp)
SET(SRC_LIST coolpropApp.cpp coolpropApp.h coolpropMain.cpp coolpropMain.h description.cpp description.h GUIFrame.cpp GUIFrame.h wx_pch.h resource.rc)
ADD_DEFINITIONS(-D WX_PRECOMP)
FIND_PACKAGE(wxWidgets REQUIRED)
INCLUDE(${wxWidgets_USE_FILE})
INCLUDE_DIRECTORIES(${COOLPROP_SRC_DIR}/include)
INCLUDE_DIRECTORIES(${COOLPROP_SRC_DIR}/externals/fmtlib)
LINK_DIRECTORIES(${COOLPROP_LIB_DIR})
LINK_LIBRARIES(CoolProp)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
IF(MSVC)
	SET_TARGET_PROPERTIES (${PROJECT_NAME} PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:windows")
	SET_TARGET_PROPERTIES (${PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:windows")
	SET_TARGET_PROPERTIES (${PROJECT_NAME} PROPERTIES LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:windows")
	SET_TARGET_PROPERTIES (${PROJECT_NAME} PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:windows")
ELSE()
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s")
ENDIF()
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${wxWidgets_LIBRARIES} -lUxTheme -mwindows)